--- a/complicated_bees/lang/zh_tw.json
+++ b/complicated_bees/lang/zh_tw.json
@@ -2,10 +2,10 @@
   "itemGroup.complicated_bees": "Complicated Bees",
   "config.jade.plugin_complicated_bees.apiary_errors": "蜂房錯誤",
   "config.jade.plugin_complicated_bees.show_errors": "顯示蜂房錯誤",
-  "config.jade.plugin_complicated_bees.show_cycle_ticks": "顯示蜂房工作周期剩余刻數",
+  "config.jade.plugin_complicated_bees.show_cycle_ticks": "顯示蜂房工作周期剩餘刻數",
   "item.complicated_bees.drone": "雄蜂",
   "item.complicated_bees.princess": "公主蜂",
-  "item.complicated_bees.queen": "蜂後",
+  "item.complicated_bees.queen": "蜂后",
   "item.complicated_bees.scoop": "捕蟲網",
   "item.complicated_bees.comb": "蜜脾",
   "item.complicated_bees.meter": "測量表",
@@ -22,7 +22,7 @@
   "item.complicated_bees.soothing_frame": "舒緩框架",
   "item.complicated_bees.cold_frame": "寒冷框架",
   "item.complicated_bees.hot_frame": "炎熱框架",
-  "item.complicated_bees.dry_frame": "幹燥框架",
+  "item.complicated_bees.dry_frame": "乾燥框架",
   "item.complicated_bees.wet_frame": "潮濕框架",
   "item.complicated_bees.deadly_frame": "致命框架",
   "item.complicated_bees.restrictive_frame": "限制框架",
@@ -34,7 +34,7 @@
   "item.complicated_bees.apiarist_chestplate": "養蜂員胸甲",
   "item.complicated_bees.apiarist_leggings": "養蜂員護腿",
   "item.complicated_bees.apiarist_boots": "養蜂員靴子",
-  "item.complicated_bees.honey_bread": "蜂蜜面包",
+  "item.complicated_bees.honey_bread": "蜂蜜麵包",
   "item.complicated_bees.honey_porkchop": "蜂蜜豬排",
   "item.complicated_bees.ambrosia": "仙饈",
   "item.complicated_bees.bee_staff": "蜜蜂法杖",
@@ -46,26 +46,26 @@
   "block.complicated_bees.generator": "發電機",
   "block.complicated_bees.wax_block": "蠟塊",
   "block.complicated_bees.wax_block_stairs": "蠟樓梯",
-  "block.complicated_bees.wax_block_slab": "蠟台階",
-  "block.complicated_bees.wax_block_wall": "蠟墻",
+  "block.complicated_bees.wax_block_slab": "蠟半磚",
+  "block.complicated_bees.wax_block_wall": "蠟牆",
   "block.complicated_bees.wax_bricks": "蠟磚",
   "block.complicated_bees.wax_brick_stairs": "蠟磚樓梯",
-  "block.complicated_bees.wax_brick_slab": "蠟磚台階",
-  "block.complicated_bees.wax_brick_wall": "蠟磚墻",
+  "block.complicated_bees.wax_brick_slab": "蠟磚半磚",
+  "block.complicated_bees.wax_brick_wall": "蠟磚牆",
   "block.complicated_bees.smooth_wax": "平滑蠟塊",
   "block.complicated_bees.smooth_wax_stairs": "平滑蠟樓梯",
-  "block.complicated_bees.smooth_wax_slab": "平滑蠟台階",
-  "block.complicated_bees.smooth_wax_wall": "平滑蠟墻",
+  "block.complicated_bees.smooth_wax_slab": "平滑蠟半磚",
+  "block.complicated_bees.smooth_wax_wall": "平滑蠟牆",
   "block.complicated_bees.chiseled_wax": "雕紋蠟塊",
-  "block.complicated_bees.honeyed_planks": "蜜漬木板",
+  "block.complicated_bees.honeyed_planks": "蜜漬木材",
   "block.complicated_bees.honeyed_stairs": "蜜漬木樓梯",
-  "block.complicated_bees.honeyed_slab": "蜜漬木台階",
+  "block.complicated_bees.honeyed_slab": "蜜漬木半磚",
   "block.complicated_bees.honeyed_fence": "蜜漬木柵欄",
   "block.complicated_bees.honeyed_fence_gate": "蜜漬木柵欄門",
   "block.complicated_bees.honeyed_button": "蜜漬木按鈕",
   "block.complicated_bees.honeyed_pressure_plate": "蜜漬木壓力板",
   "block.complicated_bees.honeyed_door": "蜜漬木門",
-  "block.complicated_bees.honeyed_trapdoor": "蜜漬木活板門",
+  "block.complicated_bees.honeyed_trapdoor": "蜜漬木地板門",
   "gui.complicated_bees.jei.centrifuge": "離心",
   "gui.complicated_bees.jei.bee_products": "蜜蜂產物",
   "gui.complicated_bees.jei.mutations": "蜜蜂突變",
@@ -104,8 +104,8 @@
   "gui.complicated_bees.boolean.false": "否",
   "gui.complicated_bees.boolean.true": "是",
   "gui.complicated_bees.generations": "捕獲後第%s代",
-  "gui.complicated_bees.jade.cycle_ticks": "工作周期剩余刻數：%s",
-  "gui.complicated_bees.error.no_flower": "沒有采蜜對象！",
+  "gui.complicated_bees.jade.cycle_ticks": "工作周期剩餘刻數：%s",
+  "gui.complicated_bees.error.no_flower": "沒有採蜜對象！",
   "gui.complicated_bees.error.wrong_temp": "溫度不符！",
   "gui.complicated_bees.error.wrong_humidity": "濕度不符！",
   "gui.complicated_bees.error.output_full": "輸出欄已滿！",
@@ -117,7 +117,7 @@
   "gene.complicated_bees.humidity_label": "濕度",
   "gene.complicated_bees.temperature_label": "溫度",
   "gene.complicated_bees.lifespan_label": "壽命",
-  "gene.complicated_bees.flower_label": "采蜜對象",
+  "gene.complicated_bees.flower_label": "採蜜對象",
   "gene.complicated_bees.tolerance_label": "適應性",
   "gene.complicated_bees.effect_label": "特殊效果",
   "gene.complicated_bees.active_time_label": "活動時間",
@@ -132,7 +132,7 @@
   "gene.complicated_bees.territory_value": "%1$sx%2$sx%1$s",
   "gene.complicated_bees.humidity.wet": "潮濕",
   "gene.complicated_bees.humidity.normal": "普通",
-  "gene.complicated_bees.humidity.dry": "幹燥",
+  "gene.complicated_bees.humidity.dry": "乾燥",
   "gene.complicated_bees.temperature.frozen": "嚴寒",
   "gene.complicated_bees.temperature.icy": "寒冷",
   "gene.complicated_bees.temperature.cold": "涼爽",
@@ -179,7 +179,7 @@
   "gene.complicated_bees.active_time.never_sleeps": "永不睡眠",
   "gui.complicated_bees.mutations.has_conditions": "突變所需特殊條件：",
   "gui.complicated_bees.mutations.block_under": "蜂房下方需為%s",
-  "gui.complicated_bees.mutations.ecstatic": "蜂後必須極為高興",
+  "gui.complicated_bees.mutations.ecstatic": "蜂后必須極為高興",
   "gui.complicated_bees.mutations.downfall": "需要降雨",
   "gui.complicated_bees.mutations.daytime": "需為白天",
   "gui.complicated_bees.mutations.nighttime": "需為夜晚",
@@ -191,7 +191,7 @@
   "jei.complicated_bees.chance": "概率",
   "comb.complicated_bees.invalid": "任意",
   "comb.complicated_bees.complicated_bees:honey": "蜂蜜",
-  "comb.complicated_bees.complicated_bees:rocky": "巖石",
+  "comb.complicated_bees.complicated_bees:rocky": "岩石",
   "comb.complicated_bees.complicated_bees:dusty": "積塵",
   "comb.complicated_bees.complicated_bees:silky": "絲滑",
   "comb.complicated_bees.complicated_bees:dripping": "滴露",
@@ -204,20 +204,20 @@
   "comb.complicated_bees.complicated_bees:amethyst": "紫水晶",
   "comb.complicated_bees.complicated_bees:coal": "煤炭",
   "comb.complicated_bees.complicated_bees:copper": "銅",
-  "comb.complicated_bees.complicated_bees:diamond": "鉆石",
+  "comb.complicated_bees.complicated_bees:diamond": "鑽石",
   "comb.complicated_bees.complicated_bees:emerald": "綠寶石",
-  "comb.complicated_bees.complicated_bees:glowstone": "熒石",
+  "comb.complicated_bees.complicated_bees:glowstone": "螢光石",
   "comb.complicated_bees.complicated_bees:gold": "金",
   "comb.complicated_bees.complicated_bees:iron": "鐵",
   "comb.complicated_bees.complicated_bees:lapis": "青金石",
-  "comb.complicated_bees.complicated_bees:netherite": "下界合金",
+  "comb.complicated_bees.complicated_bees:netherite": "獄髓",
   "comb.complicated_bees.complicated_bees:quartz": "石英",
   "comb.complicated_bees.complicated_bees:redstone": "紅石",
   "species.complicated_bees.complicated_bees:forest": "森林",
   "species.complicated_bees.complicated_bees:forest.genus": "蜜蜂屬 Apis",
   "species.complicated_bees.complicated_bees:forest.species_taxonomy": "森林蜜蜂 A. saltus",
   "species.complicated_bees.complicated_bees:forest.authority": "Ayse Eigh",
-  "species.complicated_bees.complicated_bees:forest.flavor_text": "廣泛分布於林地的昆蟲，偏好白樺。",
+  "species.complicated_bees.complicated_bees:forest.flavor_text": "廣泛分布於林地的昆蟲，偏好樺木。",
   "species.complicated_bees.complicated_bees:forest.flavor_author": "《養蜂入門指南》",
   "species.complicated_bees.complicated_bees:plains": "平原",
   "species.complicated_bees.complicated_bees:plains.genus": "蜜蜂屬 Apis",
@@ -226,10 +226,10 @@
   "species.complicated_bees.complicated_bees:plains.flavor_text": "普通的品種，喜歡開闊地帶。",
   "species.complicated_bees.complicated_bees:plains.flavor_author": "《養蜂入門指南》",
   "species.complicated_bees.complicated_bees:desert": "沙漠",
-  "species.complicated_bees.complicated_bees:desert.genus": "幹旱蜂屬 Areapis",
-  "species.complicated_bees.complicated_bees:desert.species_taxonomy": "沙漠幹旱蜂 A. harenae",
+  "species.complicated_bees.complicated_bees:desert.genus": "乾旱蜂屬 Areapis",
+  "species.complicated_bees.complicated_bees:desert.species_taxonomy": "沙漠乾旱蜂 A. harenae",
   "species.complicated_bees.complicated_bees:desert.authority": "Ayse Eigh",
-  "species.complicated_bees.complicated_bees:desert.flavor_text": "此蜂種已適應炎熱幹旱的氣候，卻無法再在溫和的環境中生存。",
+  "species.complicated_bees.complicated_bees:desert.flavor_text": "此蜂種已適應炎熱乾旱的氣候，卻無法再在溫和的環境中生存。",
   "species.complicated_bees.complicated_bees:desert.flavor_author": "《養蜂入門指南》",
   "species.complicated_bees.complicated_bees:jungle": "叢林",
   "species.complicated_bees.complicated_bees:jungle.genus": "熱帶蜂屬 Troapis",
@@ -237,9 +237,9 @@
   "species.complicated_bees.complicated_bees:jungle.authority": "Ayse Eigh",
   "species.complicated_bees.complicated_bees:jungle.flavor_text": "生長於溫暖潮濕的環境，厭惡傳統的花粉，偏好叢林植物的葉綠素。",
   "species.complicated_bees.complicated_bees:jungle.flavor_author": "《養蜂入門指南》",
-  "species.complicated_bees.complicated_bees:rocky": "巖石",
-  "species.complicated_bees.complicated_bees:rocky.genus": "巖石蜂屬 Saxapis",
-  "species.complicated_bees.complicated_bees:rocky.species_taxonomy": "灰巖巖石蜂 S. griseo",
+  "species.complicated_bees.complicated_bees:rocky": "岩石",
+  "species.complicated_bees.complicated_bees:rocky.genus": "岩石蜂屬 Saxapis",
+  "species.complicated_bees.complicated_bees:rocky.species_taxonomy": "灰岩岩石蜂 S. griseo",
   "species.complicated_bees.complicated_bees:rocky.authority": "Ayse Eigh",
   "species.complicated_bees.complicated_bees:rocky.flavor_text": "此蜂種已適應繁茂洞穴的低光照環境，相當獨特，卻已無法在正常的日光下工作。",
   "species.complicated_bees.complicated_bees:rocky.flavor_author": "《養蜂入門指南》",
@@ -304,26 +304,26 @@
   "species.complicated_bees.complicated_bees:lush.flavor_text": "⋯⋯在西瓜莖上找到了更友善的品種；第二天再看，那些蜜蜂停過的莖結出了我此生見過最大的西瓜⋯⋯",
   "species.complicated_bees.complicated_bees:lush.flavor_author": "一本破碎的筆記本",
   "species.complicated_bees.complicated_bees:robust": "強韌",
-  "species.complicated_bees.complicated_bees:robust.genus": "巖石蜂屬 Saxapis",
-  "species.complicated_bees.complicated_bees:robust.species_taxonomy": "強韌巖石蜂 S. robustus",
+  "species.complicated_bees.complicated_bees:robust.genus": "岩石蜂屬 Saxapis",
+  "species.complicated_bees.complicated_bees:robust.species_taxonomy": "強韌岩石蜂 S. robustus",
   "species.complicated_bees.complicated_bees:robust.authority": "Ayse Eigh",
   "species.complicated_bees.complicated_bees:robust.flavor_text": "新陳代謝速度一直都很緩慢，也是其對較長壽命和營養匱乏環境的妥協。",
   "species.complicated_bees.complicated_bees:robust.flavor_author": "《地底蜂群》",
   "species.complicated_bees.complicated_bees:resilient": "堅忍",
-  "species.complicated_bees.complicated_bees:resilient.genus": "巖石蜂屬 Saxapis",
-  "species.complicated_bees.complicated_bees:resilient.species_taxonomy": "堅忍巖石蜂 S. molles",
+  "species.complicated_bees.complicated_bees:resilient.genus": "岩石蜂屬 Saxapis",
+  "species.complicated_bees.complicated_bees:resilient.species_taxonomy": "堅忍岩石蜂 S. molles",
   "species.complicated_bees.complicated_bees:resilient.authority": "Ayse Eigh",
-  "species.complicated_bees.complicated_bees:resilient.flavor_text": "妊娠期較長；這些蜂後雖然長壽，但其生育能力也通常遠低於其他品種。",
+  "species.complicated_bees.complicated_bees:resilient.flavor_text": "妊娠期較長；這些蜂后雖然長壽，但其生育能力也通常遠低於其他品種。",
   "species.complicated_bees.complicated_bees:resilient.flavor_author": "《地底蜂群》",
   "species.complicated_bees.complicated_bees:outcast": "遺棄",
-  "species.complicated_bees.complicated_bees:outcast.genus": "幹旱蜂屬 Areapis",
-  "species.complicated_bees.complicated_bees:outcast.species_taxonomy": "亡命幹旱蜂 A. utlagatus",
+  "species.complicated_bees.complicated_bees:outcast.genus": "乾旱蜂屬 Areapis",
+  "species.complicated_bees.complicated_bees:outcast.species_taxonomy": "亡命乾旱蜂 A. utlagatus",
   "species.complicated_bees.complicated_bees:outcast.authority": "Ayse Eigh",
   "species.complicated_bees.complicated_bees:outcast.flavor_text": "出身高貴，卻成為了沙漠戰士，真是傳奇般的旅程。",
   "species.complicated_bees.complicated_bees:outcast.flavor_author": "《旱地蜂紀》",
   "species.complicated_bees.complicated_bees:bandit": "強盜",
-  "species.complicated_bees.complicated_bees:bandit.genus": "幹旱蜂屬 Areapis",
-  "species.complicated_bees.complicated_bees:bandit.species_taxonomy": "盜匪幹旱蜂 A. latro",
+  "species.complicated_bees.complicated_bees:bandit.genus": "乾旱蜂屬 Areapis",
+  "species.complicated_bees.complicated_bees:bandit.species_taxonomy": "盜匪乾旱蜂 A. latro",
   "species.complicated_bees.complicated_bees:bandit.authority": "Ayse Eigh",
   "species.complicated_bees.complicated_bees:bandit.flavor_text": "通常獨居，會在沙漠中捕獵，向不幸的動物收取保護費⸺似乎只是為了囤積。",
   "species.complicated_bees.complicated_bees:bandit.flavor_author": "《旱地蜂紀》",
@@ -349,7 +349,7 @@
   "species.complicated_bees.complicated_bees:warped.genus": "魔鬼蜂屬 Diapis",
   "species.complicated_bees.complicated_bees:warped.species_taxonomy": "詭異魔鬼蜂 D. pervorto",
   "species.complicated_bees.complicated_bees:warped.authority": "Ayse Eigh",
-  "species.complicated_bees.complicated_bees:warped.flavor_text": "詭異森林間，\n熒光透翼蒙藍靄，\n詭異蜂輕鳴。",
+  "species.complicated_bees.complicated_bees:warped.flavor_text": "扭曲森林間，\n熒光透翼蒙藍靄，\n詭異蜂輕鳴。",
   "species.complicated_bees.complicated_bees:warped.flavor_author": "《地獄的蜂蜜》",
   "species.complicated_bees.complicated_bees:crimson": "緋紅",
   "species.complicated_bees.complicated_bees:crimson.genus": "魔鬼蜂屬 Diapis",
@@ -417,7 +417,7 @@
   "species.complicated_bees.complicated_bees:necromantic.authority": "Ayse Eigh",
   "species.complicated_bees.complicated_bees:necromantic.flavor_text": "“我還在那里悼念死者，土里突然就伸出了一只爛掉的手！我馬上就逃了出來⋯⋯話說，周圍那些該死的蜜蜂是不是越來越多了？”",
   "species.complicated_bees.complicated_bees:necromantic.flavor_author": "《亡界蜜蜂》",
-  "species.complicated_bees.complicated_bees:ender": "末影",
+  "species.complicated_bees.complicated_bees:ender": "終界",
   "species.complicated_bees.complicated_bees:ender.genus": "異界蜂屬 Extapis",
   "species.complicated_bees.complicated_bees:ender.species_taxonomy": "巨龍異界蜂 E. draco",
   "species.complicated_bees.complicated_bees:ender.authority": "Ayse Eigh",
@@ -475,19 +475,19 @@
   "species.complicated_bees.complicated_bees:dimantic.genus": "珍寶蜂屬 Lucrapis",
   "species.complicated_bees.complicated_bees:dimantic.species_taxonomy": "貴石珍寶蜂 L. iaspis",
   "species.complicated_bees.complicated_bees:dimantic.authority": "Ayse Eigh",
-  "species.complicated_bees.complicated_bees:dimantic.flavor_text": "奇怪的是，這些蜜蜂出產的寶石總是帶著股幾不可聞的酸面包味。",
+  "species.complicated_bees.complicated_bees:dimantic.flavor_text": "奇怪的是，這些蜜蜂出產的寶石總是帶著股幾不可聞的酸麵包味。",
   "species.complicated_bees.complicated_bees:dimantic.flavor_author": "《蜜與石（修訂版）》",
   "species.complicated_bees.complicated_bees:emeradic": "綠寶",
   "species.complicated_bees.complicated_bees:emeradic.genus": "珍寶蜂屬 Lucrapis",
   "species.complicated_bees.complicated_bees:emeradic.species_taxonomy": "祖母綠珍寶蜂 L. smaragdus",
   "species.complicated_bees.complicated_bees:emeradic.authority": "Ayse Eigh",
-  "species.complicated_bees.complicated_bees:emeradic.flavor_text": "此品種的某些個體，只在其兩團覆眼間有一根巨大而極為發達的觸角。",
+  "species.complicated_bees.complicated_bees:emeradic.flavor_text": "此品種的某些個體，只在其兩團複眼間有一根巨大而極為發達的觸角。",
   "species.complicated_bees.complicated_bees:emeradic.flavor_author": "《蜜與石（修訂版）》",
   "species.complicated_bees.complicated_bees:cuprous": "聚銅",
   "species.complicated_bees.complicated_bees:cuprous.genus": "礦石蜂屬 Aesapis",
   "species.complicated_bees.complicated_bees:cuprous.species_taxonomy": "銅礦石蜂 A. cuprum",
   "species.complicated_bees.complicated_bees:cuprous.authority": "Ayse Eigh",
-  "species.complicated_bees.complicated_bees:cuprous.flavor_text": "整個物種都具有四處推動銅微粒的沖動，也因此成名。",
+  "species.complicated_bees.complicated_bees:cuprous.flavor_text": "整個物種都具有四處推動銅微粒的衝動，也因此成名。",
   "species.complicated_bees.complicated_bees:cuprous.flavor_author": "《鍛於蜂巢》",
   "species.complicated_bees.complicated_bees:precious": "珍貴",
   "species.complicated_bees.complicated_bees:precious.genus": "礦石蜂屬 Aesapis",
@@ -511,20 +511,20 @@
   "flower.complicated_bees.complicated_bees:desert": "沙漠",
   "flower.complicated_bees.complicated_bees:jungle": "叢林",
   "flower.complicated_bees.complicated_bees:lush_cave": "繁茂洞穴",
-  "flower.complicated_bees.complicated_bees:nether": "下界",
+  "flower.complicated_bees.complicated_bees:nether": "地獄",
   "flower.complicated_bees.complicated_bees:skulls": "頭顱",
   "flower.complicated_bees.complicated_bees:chorus": "紫頌",
-  "flower.complicated_bees.complicated_bees:diorite": "閃長巖",
-  "flower.complicated_bees.complicated_bees:granite": "花崗巖",
+  "flower.complicated_bees.complicated_bees:diorite": "閃長岩",
+  "flower.complicated_bees.complicated_bees:granite": "花崗岩",
   "flower.complicated_bees.complicated_bees:calcite": "方解石",
-  "flower.complicated_bees.complicated_bees:deepslate": "深板巖",
-  "flower.complicated_bees.complicated_bees:tuff": "凝灰巖",
+  "flower.complicated_bees.complicated_bees:deepslate": "深板岩",
+  "flower.complicated_bees.complicated_bees:tuff": "凝灰岩",
   "flower.complicated_bees.complicated_bees:debris": "殘骸",
-  "flower.complicated_bees.complicated_bees:dripstone": "滴水石",
+  "flower.complicated_bees.complicated_bees:dripstone": "鐘乳石",
   "effect.complicated_bees.complicated_bees:none": "無",
   "effect.complicated_bees.complicated_bees:debug": "調試",
-  "effect.complicated_bees.complicated_bees:beatific": "安詳",
-  "effect.complicated_bees.complicated_bees:beatific.desc": "給予周圍生物生命恢覆效果。",
+  "effect.complicated_bees.complicated_bees:beatific": "安祥",
+  "effect.complicated_bees.complicated_bees:beatific.desc": "給予周圍生物生命恢復效果。",
   "effect.complicated_bees.complicated_bees:venomous": "劇毒",
   "effect.complicated_bees.complicated_bees:venomous.desc": "令周圍生物中毒。",
   "effect.complicated_bees.complicated_bees:pollenic": "傳粉",
@@ -547,13 +547,13 @@
   "effect.complicated_bees.complicated_bees:cursed.desc": "將周圍的泥土和沙子緩慢轉化為靈魂土和靈魂沙。",
   "effect.complicated_bees.complicated_bees:unhealthy": "不利健康",
   "effect.complicated_bees.complicated_bees:unhealthy.desc": "使得周圍生物饑餓。",
-  "effect.complicated_bees.complicated_bees:resurrection": "覆蘇",
-  "effect.complicated_bees.complicated_bees:resurrection.desc": "將生物掉落物覆蘇成生物。",
+  "effect.complicated_bees.complicated_bees:resurrection": "復甦",
+  "effect.complicated_bees.complicated_bees:resurrection.desc": "將生物掉落物復甦成生物。",
   "effect.complicated_bees.complicated_bees:ends": "終結",
   "effect.complicated_bees.complicated_bees:ends.desc": "對周圍玩家造成大量傷害。",
   "tag.item.complicated_bees.analyzer_fuel": "分析儀能量源",
   "tag.item.complicated_bees.bee": "蜜蜂",
   "tag.item.complicated_bees.frame": "框架",
-  "tag.item.complicated_bees.royal": "公主蜂與蜂後",
+  "tag.item.complicated_bees.royal": "公主蜂與蜂后",
   "tag.item.complicated_bees.scoop_tool": "捕蟲工具"
 }
