--- a/compressedblocks/lang/zh_tw.json
+++ b/compressedblocks/lang/zh_tw.json
@@ -20,16 +20,16 @@
   "block.compressedblocks.c0_dirt": "一重壓縮泥土",
   "block.compressedblocks.c0_end_stone": "一重壓縮終界石",
   "block.compressedblocks.c0_end_stone_bricks": "一重壓縮終界石磚",
-  "block.compressedblocks.c0_gold_block": "一重壓縮金塊",
+  "block.compressedblocks.c0_gold_block": "一重壓縮黃金方塊",
   "block.compressedblocks.c0_gold_ore": "一重壓縮金礦石",
   "block.compressedblocks.c0_granite": "一重壓縮花崗岩",
   "block.compressedblocks.c0_gravel": "一重壓縮沙礫",
   "block.compressedblocks.c0_honey_block": "一重壓縮蜂蜜塊",
-  "block.compressedblocks.c0_iron_block": "一重壓縮鐵塊",
+  "block.compressedblocks.c0_iron_block": "一重壓縮鐵方塊",
   "block.compressedblocks.c0_iron_ore": "一重壓縮鐵礦石",
   "block.compressedblocks.c0_jungle_log": "一重壓縮叢林原木",
   "block.compressedblocks.c0_jungle_planks": "一重壓縮叢林木材",
-  "block.compressedblocks.c0_lapis_block": "一重壓縮青金石塊",
+  "block.compressedblocks.c0_lapis_block": "一重壓縮青金石方塊",
   "block.compressedblocks.c0_lapis_ore": "一重壓縮青金石礦石",
   "block.compressedblocks.c0_mangrove_log": "一重壓縮紅樹原木",
   "block.compressedblocks.c0_mangrove_planks": "一重壓縮紅樹木材",
@@ -89,16 +89,16 @@
   "block.compressedblocks.c1_dirt": "二重壓縮泥土",
   "block.compressedblocks.c1_end_stone": "二重壓縮終界石",
   "block.compressedblocks.c1_end_stone_bricks": "二重壓縮終界石磚",
-  "block.compressedblocks.c1_gold_block": "二重壓縮金塊",
+  "block.compressedblocks.c1_gold_block": "二重壓縮黃金方塊",
   "block.compressedblocks.c1_gold_ore": "二重壓縮金礦石",
   "block.compressedblocks.c1_granite": "二重壓縮花崗岩",
   "block.compressedblocks.c1_gravel": "二重壓縮沙礫",
   "block.compressedblocks.c1_honey_block": "二重壓縮蜂蜜塊",
-  "block.compressedblocks.c1_iron_block": "二重壓縮鐵塊",
+  "block.compressedblocks.c1_iron_block": "二重壓縮鐵方塊",
   "block.compressedblocks.c1_iron_ore": "二重壓縮鐵礦石",
   "block.compressedblocks.c1_jungle_log": "二重壓縮叢林原木",
   "block.compressedblocks.c1_jungle_planks": "二重壓縮叢林木材",
-  "block.compressedblocks.c1_lapis_block": "二重壓縮青金石塊",
+  "block.compressedblocks.c1_lapis_block": "二重壓縮青金石方塊",
   "block.compressedblocks.c1_lapis_ore": "二重壓縮青金石礦石",
   "block.compressedblocks.c1_mangrove_log": "二重壓縮紅樹原木",
   "block.compressedblocks.c1_mangrove_planks": "二重壓縮紅樹木材",
@@ -158,16 +158,16 @@
   "block.compressedblocks.c2_dirt": "三重壓縮泥土",
   "block.compressedblocks.c2_end_stone": "三重壓縮終界石",
   "block.compressedblocks.c2_end_stone_bricks": "三重壓縮終界石磚",
-  "block.compressedblocks.c2_gold_block": "三重壓縮金塊",
+  "block.compressedblocks.c2_gold_block": "三重壓縮黃金方塊",
   "block.compressedblocks.c2_gold_ore": "三重壓縮金礦石",
   "block.compressedblocks.c2_granite": "三重壓縮花崗岩",
   "block.compressedblocks.c2_gravel": "三重壓縮沙礫",
   "block.compressedblocks.c2_honey_block": "三重壓縮蜂蜜塊",
-  "block.compressedblocks.c2_iron_block": "三重壓縮鐵塊",
+  "block.compressedblocks.c2_iron_block": "三重壓縮鐵方塊",
   "block.compressedblocks.c2_iron_ore": "三重壓縮鐵礦石",
   "block.compressedblocks.c2_jungle_log": "三重壓縮叢林原木",
   "block.compressedblocks.c2_jungle_planks": "三重壓縮叢林木材",
-  "block.compressedblocks.c2_lapis_block": "三重壓縮青金石塊",
+  "block.compressedblocks.c2_lapis_block": "三重壓縮青金石方塊",
   "block.compressedblocks.c2_lapis_ore": "三重壓縮青金石礦石",
   "block.compressedblocks.c2_mangrove_log": "三重壓縮紅樹原木",
   "block.compressedblocks.c2_mangrove_planks": "三重壓縮紅樹木材",
@@ -227,16 +227,16 @@
   "block.compressedblocks.c3_dirt": "四重壓縮泥土",
   "block.compressedblocks.c3_end_stone": "四重壓縮終界石",
   "block.compressedblocks.c3_end_stone_bricks": "四重壓縮終界石磚",
-  "block.compressedblocks.c3_gold_block": "四重壓縮金塊",
+  "block.compressedblocks.c3_gold_block": "四重壓縮黃金方塊",
   "block.compressedblocks.c3_gold_ore": "四重壓縮金礦石",
   "block.compressedblocks.c3_granite": "四重壓縮花崗岩",
   "block.compressedblocks.c3_gravel": "四重壓縮沙礫",
   "block.compressedblocks.c3_honey_block": "四重壓縮蜂蜜塊",
-  "block.compressedblocks.c3_iron_block": "四重壓縮鐵塊",
+  "block.compressedblocks.c3_iron_block": "四重壓縮鐵方塊",
   "block.compressedblocks.c3_iron_ore": "四重壓縮鐵礦石",
   "block.compressedblocks.c3_jungle_log": "四重壓縮叢林原木",
   "block.compressedblocks.c3_jungle_planks": "四重壓縮叢林木材",
-  "block.compressedblocks.c3_lapis_block": "四重壓縮青金石塊",
+  "block.compressedblocks.c3_lapis_block": "四重壓縮青金石方塊",
   "block.compressedblocks.c3_lapis_ore": "四重壓縮青金石礦石",
   "block.compressedblocks.c3_mangrove_log": "四重壓縮紅樹原木",
   "block.compressedblocks.c3_mangrove_planks": "四重壓縮紅樹木材",
@@ -296,16 +296,16 @@
   "block.compressedblocks.c4_dirt": "五重壓縮泥土",
   "block.compressedblocks.c4_end_stone": "五重壓縮終界石",
   "block.compressedblocks.c4_end_stone_bricks": "五重壓縮終界石磚",
-  "block.compressedblocks.c4_gold_block": "五重壓縮金塊",
+  "block.compressedblocks.c4_gold_block": "五重壓縮黃金方塊",
   "block.compressedblocks.c4_gold_ore": "五重壓縮金礦石",
   "block.compressedblocks.c4_granite": "五重壓縮花崗岩",
   "block.compressedblocks.c4_gravel": "五重壓縮沙礫",
   "block.compressedblocks.c4_honey_block": "五重壓縮蜂蜜塊",
-  "block.compressedblocks.c4_iron_block": "五重壓縮鐵塊",
+  "block.compressedblocks.c4_iron_block": "五重壓縮鐵方塊",
   "block.compressedblocks.c4_iron_ore": "五重壓縮鐵礦石",
   "block.compressedblocks.c4_jungle_log": "五重壓縮叢林原木",
   "block.compressedblocks.c4_jungle_planks": "五重壓縮叢林木材",
-  "block.compressedblocks.c4_lapis_block": "五重壓縮青金石塊",
+  "block.compressedblocks.c4_lapis_block": "五重壓縮青金石方塊",
   "block.compressedblocks.c4_lapis_ore": "五重壓縮青金石礦石",
   "block.compressedblocks.c4_mangrove_log": "五重壓縮紅樹原木",
   "block.compressedblocks.c4_mangrove_planks": "五重壓縮紅樹木材",
@@ -365,16 +365,16 @@
   "block.compressedblocks.c5_dirt": "六重壓縮泥土",
   "block.compressedblocks.c5_end_stone": "六重壓縮終界石",
   "block.compressedblocks.c5_end_stone_bricks": "六重壓縮終界石磚",
-  "block.compressedblocks.c5_gold_block": "六重壓縮金塊",
+  "block.compressedblocks.c5_gold_block": "六重壓縮黃金方塊",
   "block.compressedblocks.c5_gold_ore": "六重壓縮金礦石",
   "block.compressedblocks.c5_granite": "六重壓縮花崗岩",
   "block.compressedblocks.c5_gravel": "六重壓縮沙礫",
   "block.compressedblocks.c5_honey_block": "六重壓縮蜂蜜塊",
-  "block.compressedblocks.c5_iron_block": "六重壓縮鐵塊",
+  "block.compressedblocks.c5_iron_block": "六重壓縮鐵方塊",
   "block.compressedblocks.c5_iron_ore": "六重壓縮鐵礦石",
   "block.compressedblocks.c5_jungle_log": "六重壓縮叢林原木",
   "block.compressedblocks.c5_jungle_planks": "六重壓縮叢林木材",
-  "block.compressedblocks.c5_lapis_block": "六重壓縮青金石塊",
+  "block.compressedblocks.c5_lapis_block": "六重壓縮青金石方塊",
   "block.compressedblocks.c5_lapis_ore": "六重壓縮青金石礦石",
   "block.compressedblocks.c5_mangrove_log": "六重壓縮紅樹原木",
   "block.compressedblocks.c5_mangrove_planks": "六重壓縮紅樹木材",
@@ -434,16 +434,16 @@
   "block.compressedblocks.c6_dirt": "七重壓縮泥土",
   "block.compressedblocks.c6_end_stone": "七重壓縮終界石",
   "block.compressedblocks.c6_end_stone_bricks": "七重壓縮終界石磚",
-  "block.compressedblocks.c6_gold_block": "七重壓縮金塊",
+  "block.compressedblocks.c6_gold_block": "七重壓縮黃金方塊",
   "block.compressedblocks.c6_gold_ore": "七重壓縮金礦石",
   "block.compressedblocks.c6_granite": "七重壓縮花崗岩",
   "block.compressedblocks.c6_gravel": "七重壓縮沙礫",
   "block.compressedblocks.c6_honey_block": "七重壓縮蜂蜜塊",
-  "block.compressedblocks.c6_iron_block": "七重壓縮鐵塊",
+  "block.compressedblocks.c6_iron_block": "七重壓縮鐵方塊",
   "block.compressedblocks.c6_iron_ore": "七重壓縮鐵礦石",
   "block.compressedblocks.c6_jungle_log": "七重壓縮叢林原木",
   "block.compressedblocks.c6_jungle_planks": "七重壓縮叢林木材",
-  "block.compressedblocks.c6_lapis_block": "七重壓縮青金石塊",
+  "block.compressedblocks.c6_lapis_block": "七重壓縮青金石方塊",
   "block.compressedblocks.c6_lapis_ore": "七重壓縮青金石礦石",
   "block.compressedblocks.c6_mangrove_log": "七重壓縮紅樹原木",
   "block.compressedblocks.c6_mangrove_planks": "七重壓縮紅樹木材",
@@ -503,16 +503,16 @@
   "block.compressedblocks.c7_dirt": "八重壓縮泥土",
   "block.compressedblocks.c7_end_stone": "八重壓縮終界石",
   "block.compressedblocks.c7_end_stone_bricks": "八重壓縮終界石磚",
-  "block.compressedblocks.c7_gold_block": "八重壓縮金塊",
+  "block.compressedblocks.c7_gold_block": "八重壓縮黃金方塊",
   "block.compressedblocks.c7_gold_ore": "八重壓縮金礦石",
   "block.compressedblocks.c7_granite": "八重壓縮花崗岩",
   "block.compressedblocks.c7_gravel": "八重壓縮沙礫",
   "block.compressedblocks.c7_honey_block": "八重壓縮蜂蜜塊",
-  "block.compressedblocks.c7_iron_block": "八重壓縮鐵塊",
+  "block.compressedblocks.c7_iron_block": "八重壓縮鐵方塊",
   "block.compressedblocks.c7_iron_ore": "八重壓縮鐵礦石",
   "block.compressedblocks.c7_jungle_log": "八重壓縮叢林原木",
   "block.compressedblocks.c7_jungle_planks": "八重壓縮叢林木材",
-  "block.compressedblocks.c7_lapis_block": "八重壓縮青金石塊",
+  "block.compressedblocks.c7_lapis_block": "八重壓縮青金石方塊",
   "block.compressedblocks.c7_lapis_ore": "八重壓縮青金石礦石",
   "block.compressedblocks.c7_mangrove_log": "八重壓縮紅樹原木",
   "block.compressedblocks.c7_mangrove_planks": "八重壓縮紅樹木材",
@@ -572,16 +572,16 @@
   "block.compressedblocks.c8_dirt": "九重壓縮泥土",
   "block.compressedblocks.c8_end_stone": "九重壓縮終界石",
   "block.compressedblocks.c8_end_stone_bricks": "九重壓縮終界石磚",
-  "block.compressedblocks.c8_gold_block": "九重壓縮金塊",
+  "block.compressedblocks.c8_gold_block": "九重壓縮黃金方塊",
   "block.compressedblocks.c8_gold_ore": "九重壓縮金礦石",
   "block.compressedblocks.c8_granite": "九重壓縮花崗岩",
   "block.compressedblocks.c8_gravel": "九重壓縮沙礫",
   "block.compressedblocks.c8_honey_block": "九重壓縮蜂蜜塊",
-  "block.compressedblocks.c8_iron_block": "九重壓縮鐵塊",
+  "block.compressedblocks.c8_iron_block": "九重壓縮鐵方塊",
   "block.compressedblocks.c8_iron_ore": "九重壓縮鐵礦石",
   "block.compressedblocks.c8_jungle_log": "九重壓縮叢林原木",
   "block.compressedblocks.c8_jungle_planks": "九重壓縮叢林木材",
-  "block.compressedblocks.c8_lapis_block": "九重壓縮青金石塊",
+  "block.compressedblocks.c8_lapis_block": "九重壓縮青金石方塊",
   "block.compressedblocks.c8_lapis_ore": "九重壓縮青金石礦石",
   "block.compressedblocks.c8_mangrove_log": "九重壓縮紅樹原木",
   "block.compressedblocks.c8_mangrove_planks": "九重壓縮紅樹木材",
@@ -641,16 +641,16 @@
   "block.compressedblocks.c9_dirt": "十重壓縮泥土",
   "block.compressedblocks.c9_end_stone": "十重壓縮終界石",
   "block.compressedblocks.c9_end_stone_bricks": "十重壓縮終界石磚",
-  "block.compressedblocks.c9_gold_block": "十重壓縮金塊",
+  "block.compressedblocks.c9_gold_block": "十重壓縮黃金方塊",
   "block.compressedblocks.c9_gold_ore": "十重壓縮金礦石",
   "block.compressedblocks.c9_granite": "十重壓縮花崗岩",
   "block.compressedblocks.c9_gravel": "十重壓縮沙礫",
   "block.compressedblocks.c9_honey_block": "十重壓縮蜂蜜塊",
-  "block.compressedblocks.c9_iron_block": "十重壓縮鐵塊",
+  "block.compressedblocks.c9_iron_block": "十重壓縮鐵方塊",
   "block.compressedblocks.c9_iron_ore": "十重壓縮鐵礦石",
   "block.compressedblocks.c9_jungle_log": "十重壓縮叢林原木",
   "block.compressedblocks.c9_jungle_planks": "十重壓縮叢林木材",
-  "block.compressedblocks.c9_lapis_block": "十重壓縮青金石塊",
+  "block.compressedblocks.c9_lapis_block": "十重壓縮青金石方塊",
   "block.compressedblocks.c9_lapis_ore": "十重壓縮青金石礦石",
   "block.compressedblocks.c9_mangrove_log": "十重壓縮紅樹原木",
   "block.compressedblocks.c9_mangrove_planks": "十重壓縮紅樹木材",
