--- a/bayou_blues/lang/zh_tw.json
+++ b/bayou_blues/lang/zh_tw.json
@@ -49,24 +49,24 @@
   "block.bayou_blues.blue_lily": "藍色百合",
   "block.bayou_blues.light_gray_lily": "淺灰色百合",
   "block.bayou_blues.cyan_lily": "青色百合",
-  "block.bayou_blues.light_blue_lily": "淡藍色百合",
-  "block.bayou_blues.magenta_lily": "品紅色百合",
+  "block.bayou_blues.light_blue_lily": "淺藍色百合",
+  "block.bayou_blues.magenta_lily": "洋紅色百合",
   "block.bayou_blues.pink_lily": "粉紅色百合",
   "block.bayou_blues.purple_lily": "紫色百合",
   "block.bayou_blues.white_lily": "白色百合",
   "block.bayou_blues.potted_blue_lily": "藍色百合盆栽",
-  "block.bayou_blues.potted_light_gray_lily": "淡灰色百合盆栽",
+  "block.bayou_blues.potted_light_gray_lily": "淺灰色百合盆栽",
   "block.bayou_blues.potted_cyan_lily": "青色百合盆栽",
-  "block.bayou_blues.potted_light_blue_lily": "淡藍色百合盆栽",
+  "block.bayou_blues.potted_light_blue_lily": "淺藍色百合盆栽",
   "block.bayou_blues.potted_magenta_lily": "洋紅色百合盆栽",
   "block.bayou_blues.potted_pink_lily": "粉紅色百合盆栽",
   "block.bayou_blues.potted_purple_lily": "紫色百合盆栽",
   "block.bayou_blues.potted_white_lily": "白色百合盆栽",
   "item.bayou_blues.blue_lily": "藍色百合",
-  "item.bayou_blues.light_gray_lily": "淡灰色百合",
+  "item.bayou_blues.light_gray_lily": "淺灰色百合",
   "item.bayou_blues.cyan_lily": "青色百合",
-  "item.bayou_blues.light_blue_lily": "淡藍色百合",
-  "item.bayou_blues.magenta_lily": "品紅色百合",
+  "item.bayou_blues.light_blue_lily": "淺藍色百合",
+  "item.bayou_blues.magenta_lily": "洋紅色百合",
   "item.bayou_blues.pink_lily": "粉紅色百合",
   "item.bayou_blues.purple_lily": "紫色百合",
   "item.bayou_blues.white_lily": "白色百合",
@@ -76,7 +76,7 @@
   "block.bayou_blues.algae_thatch_slab": "水藻團半磚",
   "block.bayou_blues.algae_thatch_stairs": "水藻團樓梯",
   "block.bayou_blues.algae_thatch_vertical_slab": "水藻團豎直半磚",
-  "block.bayou_blues.beard_moss_block": "須松羅塊",
-  "block.bayou_blues.beard_moss": "須松羅",
+  "block.bayou_blues.beard_moss_block": "鬚鬆蘿塊",
+  "block.bayou_blues.beard_moss": "鬚鬆蘿",
   "block.bayou_blues.giant_fern": "巨型蕨"
 }
