--- a/beachparty/lang/zh_tw.json
+++ b/beachparty/lang/zh_tw.json
@@ -67,9 +67,9 @@
   "block.beachparty.sand_slab": "沙子半磚",
   "block.beachparty.sandcastle": "沙堡",
   "block.beachparty.sandwaves": "波紋沙子",
-  "block.beachparty.stripped_palm_log": "去皮棕櫚原木",
-  "block.beachparty.stripped_palm_wood": "去皮棕櫚木",
-  "block.beachparty.sweetberries_cocktail": "甜漿果雞尾酒",
+  "block.beachparty.stripped_palm_log": "剝皮棕櫚原木",
+  "block.beachparty.stripped_palm_wood": "剝皮棕櫚木",
+  "block.beachparty.sweetberries_cocktail": "甜莓雞尾酒",
   "block.beachparty.table": "棕櫚桌子",
   "block.beachparty.tiki_bar": "棕櫚提基櫃台",
   "block.beachparty.tiki_chair": "棕櫚提基凳子",
@@ -93,7 +93,7 @@
   "item.beachparty.icecream_chocolate": "巧克力雪糕",
   "item.beachparty.icecream_coconut": "椰子冰棒",
   "item.beachparty.icecream_melon": "西瓜冰棒",
-  "item.beachparty.icecream_sweetberries": "甜漿果雪糕",
+  "item.beachparty.icecream_sweetberries": "甜莓雪糕",
   "item.beachparty.overgrown_disc": "§2音樂唱片",
   "item.beachparty.overgrown_disc.desc": "MissLilitu - Over the Rainbow",
   "item.beachparty.palm_boat": "棕櫚木船",
@@ -109,8 +109,8 @@
   "item.beachparty.rubber_ring_stripped": "條紋遊泳圈",
   "item.beachparty.seashell": "貝殼",
   "item.beachparty.sunglasses": "太陽鏡",
-  "item.beachparty.sweetberry_icecream": "甜漿果聖代",
-  "item.beachparty.sweetberry_milkshake": "甜漿果奶昔",
+  "item.beachparty.sweetberry_icecream": "甜莓聖代",
+  "item.beachparty.sweetberry_milkshake": "甜莓奶昔",
   "item.beachparty.swim_wings": "充氣臂環",
   "item.beachparty.trunks": "泳褲",
   "itemGroup.beachparty.creative_tab": "沙灘派對",
@@ -122,7 +122,7 @@
   "tooltip.beachparty.canbeplaced": "可放置",
   "tooltip.beachparty.coconut": "投擲到硬物上砸開",
   "tooltip.beachparty.dyeable": "可染色",
-  "tooltip.beachparty.fridge": "用於制作雪糕和冰棒",
+  "tooltip.beachparty.fridge": "用於製作雪糕和冰棒",
   "tooltip.beachparty.icecream": "永不融化，總是冰涼清爽，一分錢一分貨",
   "tooltip.beachparty.message": "右鍵打開",
   "tooltip.beachparty.radioswitch": "滾輪切換電台頻道",
@@ -136,5 +136,5 @@
   "tooltip.beachparty.swimwearleggings": "-[褲子]",
   "tooltip.beachparty.swimwearline1": "穿上後：",
   "tooltip.beachparty.swimwearline2": "+17% 遊泳速度",
-  "tooltip.beachparty.tiki": "用於調制雞尾酒和飲料"
+  "tooltip.beachparty.tiki": "用於調製雞尾酒和飲料"
 }
