--- a/beautify/lang/zh_tw.json
+++ b/beautify/lang/zh_tw.json
@@ -62,9 +62,9 @@
   "tooltip.beautify.trellis.tooltip.info": "可以放置在墻上或天花板上，可攀爬；手持植物右鍵可將其放入其中。",
   "tooltip.beautify.trellis.tooltip.plant_header": "植物：",
   "tooltip.beautify.trellis.tooltip.plants": "玫瑰叢，向日葵，牡丹，丁香，藤蔓，垂淚藤，纏怨藤，發光地衣。",
-  "tooltip.beautify.hanging_pot.tooltip.info": "可懸掛在方塊上或者像往常一樣放在地面上；右鍵可將植物放進去；對植物手持骨粉右鍵有1/3概率覆制植物",
+  "tooltip.beautify.hanging_pot.tooltip.info": "可懸掛在方塊上或者像往常一樣放在地面上；右鍵可將植物放進去；對植物手持骨粉右鍵有1/3概率複製植物",
   "tooltip.beautify.hanging_pot.tooltip.plant_header": "盆栽植物：",
-  "tooltip.beautify.hanging_pot.tooltip.plants": "對所有小型花，玫瑰叢，丁香，牡丹，向日葵，藤蔓，垂淚藤，纏怨藤，發光地衣，發光漿果，甜漿果有效。",
+  "tooltip.beautify.hanging_pot.tooltip.plants": "對所有小型花，玫瑰叢，紫丁香，牡丹，向日葵，藤蔓，垂泣藤，扭曲藤，發光地衣，螢光莓，甜莓有效。",
   "tooltip.beautify.bookstack.tooltip": "可隨意放置書堆，對著書堆Shift右鍵改變模型；可以像書架一樣為附魔台提升附魔等級。",
   "tooltip.beautify.lamp.info": "可以像燈籠一樣懸掛和放置，右鍵以開關",
   "tooltip.beautify.candelabra.info": "可以像燈籠一樣懸掛和放置。右鍵以開關。",
