--- a/berry_good/lang/zh_tw.json
+++ b/berry_good/lang/zh_tw.json
@@ -1,11 +1,11 @@
 {
   "block.berry_good.cave_vine_pips": "洞穴藤蔓種子",
-  "block.berry_good.sweet_berry_bush_pips": "甜漿果叢種子",
-  "item.berry_good.glow_berry_pips": "發光漿果籽",
-  "item.berry_good.glowgurt": "發光酸奶",
+  "block.berry_good.sweet_berry_bush_pips": "甜莓叢種子",
+  "item.berry_good.glow_berry_pips": "螢光莓果籽",
+  "item.berry_good.glowgurt": "螢光酸奶",
   "item.berry_good.music_disc_fox": "音樂唱片",
   "item.berry_good.music_disc_fox.desc": "RENREN - Fox",
-  "item.berry_good.sweet_berry_meatballs": "甜漿果肉丸",
-  "item.berry_good.sweet_berry_mince": "甜漿果肉糜",
-  "item.berry_good.sweet_berry_pips": "甜漿果籽"
+  "item.berry_good.sweet_berry_meatballs": "甜莓肉丸",
+  "item.berry_good.sweet_berry_mince": "甜莓肉糜",
+  "item.berry_good.sweet_berry_pips": "甜莓籽"
 }
