--- a/betterdefaultbiomes/lang/zh_tw.json
+++ b/betterdefaultbiomes/lang/zh_tw.json
@@ -195,9 +195,9 @@
   "block.betterdefaultbiomes.palm_sapling_potted": "棕櫚樹苗盆栽",
   "block.betterdefaultbiomes.palm_leaves": "棕櫚樹葉",
   "block.betterdefaultbiomes.palm_log": "棕櫚原木",
-  "block.betterdefaultbiomes.palm_wood": "棕櫚木",
+  "block.betterdefaultbiomes.palm_wood": "棕櫚木塊",
   "block.betterdefaultbiomes.palm_log_stripped": "去皮棕櫚原木",
-  "block.betterdefaultbiomes.palm_wood_stripped": "去皮棕櫚木",
+  "block.betterdefaultbiomes.palm_wood_stripped": "去皮棕櫚木塊",
   "block.betterdefaultbiomes.palm_planks": "棕櫚木材",
   "block.betterdefaultbiomes.palm_stairs": "棕櫚木樓梯",
   "block.betterdefaultbiomes.palm_slab": "棕櫚木半磚",
@@ -213,9 +213,9 @@
   "block.betterdefaultbiomes.swamp_willow_sapling_potted": "沼澤柳樹苗盆栽",
   "block.betterdefaultbiomes.swamp_willow_leaves": "沼澤柳樹葉",
   "block.betterdefaultbiomes.swamp_willow_log": "沼澤柳原木",
-  "block.betterdefaultbiomes.swamp_willow_wood": "沼澤柳木",
+  "block.betterdefaultbiomes.swamp_willow_wood": "沼澤柳木塊",
   "block.betterdefaultbiomes.swamp_willow_log_stripped": "去皮沼澤柳原木",
-  "block.betterdefaultbiomes.swamp_willow_wood_stripped": "去皮沼澤柳木",
+  "block.betterdefaultbiomes.swamp_willow_wood_stripped": "去皮沼澤柳木塊",
   "block.betterdefaultbiomes.swamp_willow_planks": "沼澤柳木材",
   "block.betterdefaultbiomes.swamp_willow_stairs": "沼澤柳木樓梯",
   "block.betterdefaultbiomes.swamp_willow_slab": "沼澤柳木半磚",
